--- a/index.css
+++ b/index.css
@@ -62,6 +62,28 @@ img[alt='f1'] {
   bottom: 0;
   animation: loading 1s;
 }
+.buttons {
+  display: flex;
+  gap: 15px;
+}
+.buttons button {
+  all: unset;
+  height: 1.7rem;
+  border-radius: 0.4rem;
+  padding: 0.3rem;
+  background: #4d455d;
+}
+.buttons button:hover:not(:disabled) {
+  color: #e96479;
+}
+.buttons button:focus {
+  border: 1px solid #f5e9cf;
+}
+.buttons button:disabled {
+  background: #7d8181;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
 @media (min-width: 960px) {
   main {
     grid-template-columns: repeat(3, 1fr);
