--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
+:root {
+  --txtColor: #b5abd8;
+}
 * {
-  box-sizing: content-box;
+  box-sizing: border-box !important;
   font-size: 20px;
-  color: #b5abd8;
+  color: var(--txtColor);
 }
 html {
   background-color: #18122b;
@@ -52,7 +55,7 @@ main div:hover {
 }
 img[alt='f1'] {
   border-radius: 0.2rem;
-  width: 100%;
+  width: calc(100% - 1rem);
   height: auto;
 }
 .loading {
@@ -71,16 +74,16 @@ img[alt='f1'] {
   height: 1.7rem;
   border-radius: 0.4rem;
   padding: 0.3rem;
-  background: #4d455d;
+  background: #443c68;
 }
 .buttons button:hover:not(:disabled) {
-  color: #e96479;
+  color: #f5e9cf;
 }
 .buttons button:focus {
-  border: 1px solid #f5e9cf;
+  border: 1px solid #c1aefc;
 }
 .buttons button:disabled {
-  background: #7d8181;
+  background: #181823;
   opacity: 0.5;
   cursor: not-allowed;
 }
