--- a/index.css
+++ b/index.css
@@ -178,6 +178,20 @@ div#specificity {
     grid-row: 1 / span 3;
   }
 }
+.transition {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.transition .transform {
+  box-shadow: 0px 0px 4px rgba(115, 31, 251, 0.2);
+  transition: transform 2s ease-out, box-shadow 2s ease-out;
+}
+.transition .transform:hover {
+  transition: transform 0.1s ease-in, box-shadow 0.1s ease-in;
+  border: none;
+  box-shadow: 0px 0px 10px rgba(115, 31, 251, 0.2);
+  transform: scale(1.2) translateY(-5px);
+}
 
 @media (max-width: 180px) {
   body::after {
